[metadata]
name = wordpress_api_connector
author = Joern Boegeholz
author-email = boegeholz.joern@gmail.com
summary = An API wrapper / connector for Wordpress
description-file = README.md
home-page = https://github.com/jboegeholz/wordpress_api_connector
license = MIT
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    tutorial

[files]
packages =
    wordpress_api_connector